------------------------------------------------------
Version 2.3.2
------------------------------------------------------

- Fixed some misunderstandings about block updates
- Changed checking of light level to the location the entity will spawn at instead of the cage's location
- [API] Moved the ACTIVE IProperty to API

------------------------------------------------------
Version 2.3.1
------------------------------------------------------

- Re-enabled the JEI plugin
- Moved to official Forge builds instead of the bootleg ones I was using
- Re-added the anti-boss config
  - Shards for bosses can still be obtained, but they will not spawn.
- Fixed Shard being unobtainable in Survival
  - Left click on the origin block with a Diamond instead of right click.
  - PlayerInteractEvent is currently broken as the system that powers it is being re-done. Until then, left click!

------------------------------------------------------
Version 2.3.0
------------------------------------------------------

- Initial pre-release for Minecraft 1.9. You still need to wait for Forge to release builds.
  - Spawning is a bit... iffy. You'll see if you try it. Not sure if it's my fault or Forge's.
  - Direct port. No major changes. Worlds should move just fine.
  - All compatibility has been disabled for now.

------------------------------------------------------
Version 2.2.7
------------------------------------------------------

- Added compatibility with Blood Magic
  - Allows requiring use of LP in order for the Soul Cage to function.
  - Defaults to 250 LP required *per mob* on an individual basis. This means that it will only spawn the amount of mobs available from your current LP count.
  - Causes a nausea effect when not enough LP is available and the cage is activated. Disallows spawning.
- Config to disallow Cage Born mobs from counting towards Shard kill count